--- a/README.adoc
+++ b/README.adoc
@@ -9,28 +9,32 @@ Leiningen coordinates:
 (http://clojars.org/cooljure/latest-version.svg)]
 (http://clojars.org/cooljure)
 
-## Overview
+Overview
+--------
 
 Have you ever wanted to do something simple but clojure.core doesn't support it? Or, maybe you are wishing for an enhanced version of a standard function. The goal of Cooljure is to add support for these convenience features, so that you have a simple way of using either the enhanced version or the original version.
 
 The goal in using `cooljure.core` is that you can just plop it in any namespace without having to worry about any conflicts with core functionality. So, both the core functions and the added/enhanced functions are both available for use at all times. As such, we use normally use `:refer :all` for cooljure.core in our namespaces:
 
-```clojure
+[source,clojure]
+----
 (ns my.proj
   (:require ...
             [cooljure.core    :refer :all]
             [cooljure.csv     :as cool-csv]
             [cooljure.parse   :as cool-parse]
             ... ))
-````
+----
 
-## cooljure.core - Basic functions
+cooljure.core - Basic functions
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-### The truth is not ambiguous
+The truth is not ambiguous
+^^^^^^^^^^^^^^^^^^^^^^^^^^
 
 Clojure marries the worlds of Java and Lisp. Unfortunately, these two worlds have different ideas of truth, so Clojure accepts both `false` and `nil` as _false_. Sometimes you want to coerce logical values into literal _true_ or _false_ values, so we provide a simple way to do that:
 
-```
+----
 (truthy? arg)
   Returns true if arg is logical true (neither nil nor false);
   otherwise returns false.
@@ -38,13 +42,14 @@ Clojure marries the worlds of Java and Lisp. Unfortunately, these two worlds hav
 (falsey? arg)
   Returns true if arg is logical false (either nil or false);
   otherwise returns false. Equivalent to (not (truthy? arg)).
-```
+----
 
-### Convenience testing seq's
+Convenience testing seq's
+^^^^^^^^^^^^^^^^^^^^^^^^^
 
 These functions aren't in clojure.core, but people keep writing into the mailing list wondering where they are. Well, now they are available:
 
-```
+----
 (any? pred coll)
   For any predicate & collection, returns true if (pred x) is 
   logical true for any x in coll; otherwise returns false. Like
@@ -53,7 +58,8 @@ These functions aren't in clojure.core, but people keep writing into the mailing
 (not-empty? coll)
   For any collection, returns true if coll contains any items; 
   otherwise returns false. Equivalent to (not (empty? coll)).
-```
+----
+
 ### Focus on vectors
 
 Clojure's seq abstraction (and lazy seq's) is very useful, but sometimes you just want everything to stay in a nice, eager, random-access vector. Here is an easy way to build up a vector result:
