--- a/README.adoc
+++ b/README.adoc
@@ -156,9 +156,9 @@ To be precise, the function signatures are:
 cooljure.csv - Functions for using CSV (Comma Separate Value) files
 ~~~~~~~~~~
 
-TEMP TODO:  see source code [cooljure.csv](http://github.com/cloojure/cooljure/blob/master/src/cooljure/csv.clj)
+TEMP TODO:  see source code http://github.com/cloojure/cooljure/blob/master/src/cooljure/csv.clj[cooljure.csv]
 
 coojure.parse - Functions to ease parsing
 ~~~~~~~~~~
 
-TEMP TODO:  see source code [cooljure.parse](http://github.com/cloojure/cooljure/blob/master/src/cooljure/parse.clj)
+TEMP TODO:  see source code http://github.com/cloojure/cooljure/blob/master/src/cooljure/parse.clj[cooljure.parse]
