--- a/README.adoc
+++ b/README.adoc
@@ -116,12 +116,13 @@ throw an Exception in the event the keyword is not present in the map:
 
 ----
 (grab m k)
-  A fail-fast version of get. For map m & key k, returns the value v associated with k in
-  m.  Throws an exception if k is not present in m.
+  A fail-fast version of get. For map m & key k, returns the value v associated
+  with k in m.  Throws an exception if k is not present in m.
 
 (grab-in m ks)
-  A fail-fast version of get-in. For map m & keys ks, returns the value v associated with
-  ks in m, as for (get-in m ks). Throws an exception if the path ks is not present in m.
+  A fail-fast version of get-in. For map m & keys ks, returns the value v
+  associated with ks in m, as for (get-in m ks). Throws an exception if the path
+  ks is not present in m.
 ----
 
 Default value in case of Exception
@@ -132,8 +133,8 @@ Exception converted into a default value.  That is when you need:
 
 ----
 (with-exception-default default-val & body)
-  Evaluates body & returns its result.  In the event of an exception the specified default
-  value is returned instead."
+  Evaluates body & returns its result.  In the event of an exception the
+  specified default value is returned instead."
 ----
 
 Expression debugging
@@ -215,16 +216,17 @@ test namespace:
 
 ----
 (test-all & ns-list)
-  Convenience fn to reload a namespace & the corresponding test namespace from disk and
-  execute tests i the REPL.  Assumes canonical project test file organization with
-  parallel src/... & test/... directories, where a '-test' suffix is added to all src
-  namespaces to generate the cooresponding test namespace.  Example:
+  Convenience fn to reload a namespace & the corresponding test namespace from
+  disk and execute tests i the REPL.  Assumes canonical project test file
+  organization with parallel src/... & test/... directories, where a '-test'
+  suffix is added to all src namespaces to generate the cooresponding test
+  namespace.  Example:
 
     (test-all 'cooljure.core 'cooljure.csv)
 
-  This will reload cooljure.core, cooljure.core-test, cooljure.csv, cooljure.csv-test and
-  then execute clojure.test/run-tests on both of the test namespaces."
-  [& ns-list]
+  This will reload cooljure.core, cooljure.core-test, cooljure.csv,
+  cooljure.csv-test and then execute clojure.test/run-tests on both of the test
+  namespaces.
 ----
 
 Floating Point Number Comparison
