--- a/README.adoc
+++ b/README.adoc
@@ -232,7 +232,25 @@ test namespace:
 Floating Point Number Comparison
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-Everyone know that you shouldn't compare floating-point numbers (e.g. float, double, etc) for equality since roundoff errors can prevent a precise match between logically equivalent results.  However, it has always been awkward to regenerate "approx-equals" code by hand
+Everyone know that you shouldn't compare floating-point numbers (e.g. float, double, etc) for equality since roundoff errors can prevent a precise match between logically equivalent results.  However, it has always been awkward to regenerate "approx-equals" code by hand every time new project requires it.  Here we have a simple function that compares two floating-point values (cast to double) for equality by specifying either the number of significant digits that must match or the maximum error tolerance allowed:
+
+----
+(defn rel= val1 val2 & {:as opts} )
+  Returns true if 2 double-precision numbers are relatively equal, else false.  Relative
+  equality is specified as either (1) the N most significant digits are equal, or (2) the
+  absolute difference is less than a tolerance.  Input values are coerced to double before
+  comparison."
+----
+An extract from the unit tests illustrates the use of `rel=`
+[source,clojure]
+----
+  (is      (rel= 123450000 123456789 :digits 4 ))
+  (is (not (rel= 123450000 123456789 :digits 6 )))
+
+  (is      (rel= 1 1.001 :tol 0.01 ))
+  (is (not (rel= 1 1.001 :tol 0.0001 )))
+)
+----
 
 cooljure.csv - Functions for using CSV (Comma Separate Value) files
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
