--- a/README.adoc
+++ b/README.adoc
@@ -15,7 +15,7 @@ you are wishing for an enhanced version of a standard function. The goal of Cool
 add support for these convenience features, so that you have a simple way of using either
 the enhanced version or the original version.
 
-The goal in using `cooljure.core` is that you can just plop it in any namespace without
+The goal in using `cooljure.core` is that you can just plop it into any namespace without
 having to worry about any conflicts with core functionality. So, both the core functions
 and the added/enhanced functions are both available for use at all times. As such, we use
 normally use `:refer :all` for cooljure.core in our namespaces:
@@ -51,8 +51,8 @@ simple way to do that:
   otherwise returns false. Equivalent to (not (truthy? arg)).
 ----
 
-Convenience testing seq's
-^^^^^^^^^^^^^^^^^^^^^^^^^
+Convenience in testing seq's
+^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
 These functions aren't in clojure.core, but people keep writing into the mailing list
 wondering where they are. Well, now they are available:
@@ -85,6 +85,8 @@ a vector result:
 ----
 => (conjv '(1 2) 3)
 [1 2 3]
+=> (conjv [1 2] 3 4 5 6)
+[1 2 3 4 5 6]
 ----
 
 Map manipulation
@@ -97,7 +99,7 @@ Here is very handy function for that:
 ----
 (keyvals m)
   For any map m, returns the keys & values of m as a vector, 
-  suitable for reconstructing via (apply hashmap (keyvals m)).
+  suitable for reconstructing via (apply hash-map (keyvals m)).
 ----
 [source,clojure]
 ----
@@ -134,7 +136,7 @@ Exception converted into a default value.  That is when you need:
 ----
 (with-exception-default default-val & body)
   Evaluates body & returns its result.  In the event of an exception the
-  specified default value is returned instead."
+  specified default value is returned instead of the exception."
 ----
 
 Expression debugging
@@ -177,8 +179,8 @@ after inc => 2
 4
 ----
 
-Sometimes you may prefer to print out the expression itself, or nothing at all. Then, just
-use `spy-expr` or `spy-val`:
+Sometimes you may prefer to print out the literal expression instead of a
+message, or just the value itself. Then, just use `spy-expr` or `spy-val`:
 
 [source,clojure]
 ----
@@ -217,7 +219,7 @@ test namespace:
 ----
 (test-all & ns-list)
   Convenience fn to reload a namespace & the corresponding test namespace from
-  disk and execute tests i the REPL.  Assumes canonical project test file
+  disk and execute tests in the REPL.  Assumes canonical project test file
   organization with parallel src/... & test/... directories, where a '-test'
   suffix is added to all src namespaces to generate the cooresponding test
   namespace.  Example:
@@ -237,15 +239,15 @@ double, etc) for equality since roundoff errors can prevent a precise match
 between logically equivalent results.  However, it has always been awkward to
 regenerate "approx-equals" code by hand every time new project requires it.
 Here we have a simple function that compares two floating-point values (cast to
-double) for equality by specifying either the number of significant digits that
-must match or the maximum error tolerance allowed:
+double) for relative equality by specifying either the number of significant
+digits that must match or the maximum error tolerance allowed:
 
 ----
-(defn rel= val1 val2 & {:as opts} )
-  Returns true if 2 double-precision numbers are relatively equal, else false.
-  Relative equality is specified as either (1) the N most significant digits are
-  equal, or (2) the absolute difference is less than a tolerance value.  Input values
-  are coerced to double before comparison."
+(rel= val1 val2 & opts)
+  Returns true if 2 double-precision numbers are relatively equal, else false.  Relative
+  equality is specified as either (1) the N most significant digits are equal, or (2) the
+  absolute difference is less than a tolerance value.  Input values are coerced to double
+  before comparison.  
 ----
 An extract from the unit tests illustrates the use of `rel=`
 [source,clojure]
