--- a/README.adoc
+++ b/README.adoc
@@ -7,8 +7,7 @@ Leiningen coordinates:
 
 image:http://clojars.org/cooljure/latest-version.svg[ http://clojars.org/cooljure ]
 
-Overview
---------
+== Overview
 
 Have you ever wanted to do something simple but clojure.core doesn't support it? Or, maybe
 you are wishing for an enhanced version of a standard function. The goal of Cooljure is to
@@ -16,9 +15,9 @@ add support for these convenience features, so that you have a simple way of usi
 the enhanced version or the original version.
 
 The goal in using `cooljure.core` is that you can just plop it into any namespace without
-having to worry about any conflicts with core functionality. So, both the core functions
+having to worry about any conflicts with `clojure.core` functionality. So, both the core functions
 and the added/enhanced functions are both available for use at all times. As such, we use
-normally use `:refer :all` for cooljure.core in our namespaces:
+normally use `:refer :all` for `cooljure.core` in our namespaces:
 
 [source,clojure]
 ----
@@ -30,11 +29,9 @@ normally use `:refer :all` for cooljure.core in our namespaces:
             ... ))
 ----
 
-cooljure.core - Basic functions
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== cooljure.core - Basic functions
 
-The truth is not ambiguous
-^^^^^^^^^^^^^^^^^^^^^^^^^^
+==== The truth is not ambiguous
 
 Clojure marries the worlds of Java and Lisp. Unfortunately, these two worlds have
 different ideas of truth, so Clojure accepts both `false` and `nil` as _false_. Sometimes
@@ -51,8 +48,7 @@ simple way to do that:
   otherwise returns false. Equivalent to (not (truthy? arg)).
 ----
 
-Convenience in testing seq's
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+==== Convenience in testing seq's
 
 These functions aren't in clojure.core, but people keep writing into the mailing list
 wondering where they are. Well, now they are available:
@@ -68,8 +64,7 @@ wondering where they are. Well, now they are available:
   otherwise returns false. Equivalent to (not (empty? coll)).
 ----
 
-Focus on vectors
-^^^^^^^^^^^^^^^^
+==== Focus on vectors
 
 Clojure's seq abstraction (and lazy seq's) is very useful, but sometimes you just want
 everything to stay in a nice, eager, random-access vector. Here is an easy way to build up
@@ -89,8 +84,7 @@ a vector result:
 [1 2 3 4 5 6]
 ----
 
-Map manipulation
-^^^^^^^^^^^^^^^^
+==== Map manipulation
 
 Sometimes you want to extract the keys & values from a map for manipulation or extension
 before building up another map (especially useful manipulating default function args).
@@ -109,8 +103,7 @@ Here is very handy function for that:
 {:b 2, :a 1}
 ----
 
-Default value in case of Exception
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+==== Default value in case of Exception
 
 Sometimes you know an operation may result in an Exception, and you would like to have the
 Exception converted into a default value.  That is when you need:
@@ -121,8 +114,7 @@ Exception converted into a default value.  That is when you need:
   specified default value is returned instead of the exception."
 ----
 
-Expression debugging
-~~~~~~~~~~~~~~~~~~~~
+=== Expression debugging
 
 Ever been debugging some new code and had trouble inserting printing out intermediate
 values?  For example:
@@ -189,8 +181,7 @@ To be precise, the function signatures are:
 (spy-val   expr)
 ----
 
-REPL driven testing
-~~~~~~~~~~~~~~~~~~~
+=== REPL driven testing
 
 Developing at the REPL is productive & cool, but it can be a pain to reload source files
 modified in an external editor.  This is especially so when simultaneously editing both
@@ -208,13 +199,12 @@ test namespace:
 
     (test-all 'cooljure.core 'cooljure.csv)
 
-  This will reload cooljure.core, cooljure.core-test, cooljure.csv,
-  cooljure.csv-test and then execute clojure.test/run-tests on both of the test
+  This will reload `cooljure.core`, `cooljure.core-test`, `cooljure.csv`,
+  `cooljure.csv-test` and then execute clojure.test/run-tests on both of the test
   namespaces.
 ----
 
-Floating Point Number Comparison
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== Floating Point Number Comparison
 
 Everyone know that you shouldn't compare floating-point numbers (e.g. float,
 double, etc) for equality since roundoff errors can prevent a precise match
@@ -244,12 +234,10 @@ An extract from the unit tests illustrates the use of `rel=`
 
 link:explicit.adoc[cooljure.explicit - Explicit Language for Clojure]
 
-cooljure.csv - Functions for using CSV (Comma Separate Value) files
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== cooljure.csv - Functions for using CSV (Comma Separate Value) files
 
 TEMP TODO:  see source code http://github.com/cloojure/cooljure/blob/master/src/cooljure/csv.clj[cooljure.csv]
 
-coojure.parse - Functions to ease parsing
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=== coojure.parse - Functions to ease parsing
 
 TEMP TODO:  see source code http://github.com/cloojure/cooljure/blob/master/src/cooljure/parse.clj[cooljure.parse]
