--- a/README.adoc
+++ b/README.adoc
@@ -234,7 +234,11 @@ An extract from the unit tests illustrates the use of `rel=`
 
 === cooljure.explicit - Explicit Language for Clojure
 
-link:src/cooljure/explicit.adoc[Link to documentation]
+Clojure tries to be flexible and return reasonable default value (usually `nil`) when
+something goes wrong (for example, looking up a non-existent key in a map).  Cooljure.explicit
+disables this behavior and instead implements a "fail-fast" philosophy.
+
+link:src/cooljure/explicit.adoc[cooljure.explicit documentation]
 
 === cooljure.csv - Functions for using CSV (Comma Separate Value) files
 
