--- a/src/cooljure/explicit.adoc
+++ b/src/cooljure/explicit.adoc
@@ -31,13 +31,14 @@ present in the map.  Usage is illustrated below:
 [source,clojure]
 ----
 (cooljure.explicit/get m k)
-  A fail-fast version of get. For map m & key k, returns the value v associated
-  with k in m.  Throws an exception if k is not present in m.
+  A fail-fast version of clojure.core/get. For map m & key k, returns
+  the value v associated with k in m.  Throws an exception if k is not
+  present in m.
 
 (cooljure.explicit/get-in m ks)
-  A fail-fast version of get-in. For map m & keys ks, returns the value v
-  associated with ks in m, as for (get-in m ks). Throws an exception if the path
-  ks is not present in m.
+  A fail-fast version of clojure.core/get-in. For map m & keys ks,
+  returns the value v associated with ks in m, as for (get-in m ks).
+  Throws an exception if the path ks is not present in m.
 ----
 
 Then, whenever you want to perform key-based lookup in maps, just use
@@ -60,11 +61,9 @@ user=> (def mm {:a 1 :b {:c 3}})
 user=> (x/get-in mm [:b :c])
 3
 user=> (x/get-in mm [:b :z])
-
 IllegalArgumentException Key seq not present in map:
   map : {:b {:c 3}, :a 1}
   keys: [:b :z]
   cooljure.explicit/get-in (explicit.clj:34)
-user=> 
 ----
 
