--- a/src/cooljure/explicit.adoc
+++ b/src/cooljure/explicit.adoc
@@ -44,7 +44,7 @@ present in the map.  Usage is illustrated below:
 Then, whenever you want to perform key-based lookup in maps, just use
 `cooljure.explicit` instead of the `clojure.core` version:
 
-[source,java]
+[source,text]
 ----
 user=> (require '[cooljure.explicit :as x])
 
