--- a/src/cooljure/csv.adoc
+++ b/src/cooljure/csv.adoc
@@ -72,10 +72,19 @@ details.
 
 In some cases, the user may prefer a column-oriented output format over the default
 row-oriented format. Or one may wish to convert between row- and column-oriented formats.
-In this case, the user may wish to use:
+In this case, the user may wish to use the `row-maps->col-vecs` to convert between a
+sequence of maps (one per row of input data) to a map of vectors, where each keyword label
+is associated with a vector of the corresponding values from all rows.  Continuing the
+above example:
 
 [source,clojure]
 ----
-(cooljure.explicit/get m k)
+user=> (def rowmap-data (csv/parse-csv->row-maps csv-str))
+user=> (def colvec-data (csv/row-maps->col-vecs rowmap-data))
+
+user=> (pprint colvec-data)
+{:phone ["555-1234" "999-1234"],
+ :email ["me@gmail.com" "you@gmail.com"],
+ :name ["me" "you"]}
 ----
 
